Updated outlook.office.com Fixes: scrollbar selectors

--- a/office.com/outlook/fix.user.css
+++ b/office.com/outlook/fix.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           outlook.office.com Fixes
 @description    Userstyle for outlook.office.com
-@version        0.0.7
+@version        0.0.8
 @author         Boian Berberov (https://github.com/bberberov)
 @license        EUPL-1.2
 @namespace      https://github.com/bberberov/userweb
@@ -14,17 +14,8 @@
 @-moz-document
 	domain("outlook.office.com")
 {
-	body	{
+	.customScrollBar	{
 		scrollbar-color: unset !important;
 		scrollbar-width: unset !important;
-	}
-}
-
-@-moz-document
-	url-prefix("https://outlook.office.com/calendar/")
-{
-	div[data-is-scrollable="true"]	{
-		scrollbar-color: unset;
-		scrollbar-width: unset;
 	}
 }
